@@ -1,3 +1,7 @@
+2016-03-15  Werner Lemberg  <wl@gnu.org>
+
+	* src/autofit/aflatin.c (af_latin_compute_stem_width): Optimize.
+
 2016-03-14  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[smooth] Temporarily revert 6eb6158dd787 (#47114).
